--- a/assets/sass/noscript.scss
+++ b/assets/sass/noscript.scss
@@ -17,7 +17,7 @@
 
 	#wrapper {
 		background-color:		_palette(wrapper-bg);
-		background-image:		url('../../images/overlay.png'),	linear-gradient(0deg, rgba(0,0,0,0.1), rgba(0,0,0,0.1)),	url('../../images/PBackground.png');
+		background-image:		url('../../images/overlay.png'),	linear-gradient(0deg, rgba(0,0,0,0.1), rgba(0,0,0,0.1)),	url('../../images/PBackground.jpg');
 		background-size:		auto,								auto,														100% auto;
 		background-position:	center,								center,														top center;
 		background-repeat:		repeat,								no-repeat,													no-repeat;
@@ -45,4 +45,5 @@
 		}
 
 	}
+
 
