--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3228,7 +3228,7 @@ input, select, textarea {
 	}
 
 		#wrapper > .bg {
-			position: fixed;
+			position: absolute;
 			top: 0;
 			left: 0;
 			width: 100%;
